Fixed overflow issue in activities. Omg.

--- a/Webapp/ren-ctf-webapp/src/App.css
+++ b/Webapp/ren-ctf-webapp/src/App.css
@@ -431,10 +431,11 @@ challenges {
 }
 
 .tab {
-  overflow: hidden;
+  /* overflow: auto; */
   /* background-color: rgb(0, 0, 0);
   border: solid white;
   border-width: 1px; */
+  height: 8%;
 }
 
 /* Style the buttons inside the tab */
@@ -449,6 +450,7 @@ challenges {
   font-size: 17px;
   font-family: "Jersey 15", sans-serif;
   color: white;
+  height: 100%;
   
 }
 
@@ -464,11 +466,11 @@ challenges {
 
 /* Style the tab content */
 .tabcontent {
-  display: none;
   border-top: none;
-  overflow: hidden;
+  overflow-y: auto;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
+  height: 92%;
   animation: fadeEffect 1s; /* Fading effect takes 1 second */
 }
 
